refactor, cleaned up